@@ -7,9 +7,6 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <!--<name>Airbnb-java-selenium-testng</name>
-    <url>http://maven.apache.org</url>-->
-
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <aspectj.version>1.8.10</aspectj.version>
@@ -67,7 +64,7 @@
                 <configuration>
                     <forkCount>1</forkCount>
                     <reuseForks>true</reuseForks>
-                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                    <argLine>-Xmx1024m</argLine>
                     <suiteXmlFiles>
                         <!-- <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>  -->
                         <suiteXmlFile>test-parallel.xml</suiteXmlFile>
@@ -99,15 +96,6 @@
                     </execution>
                 </executions>
             </plugin>
-
-           <!-- <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.7.0</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
-            </plugin>-->
         </plugins>
     </build>
     <dependencies>
